# bioAnalyst

./: .env.example  .gitignore  CLAUDE.md  README.md  dataFlow.md  end-to-end.md  productStructure.md  requirements.txt
backend/: pyproject.toml
backend/nullifier/: cli.py  events.py  pipeline.py  provenance.py  server.py
backend/nullifier/agents/: __init__.py  analyst.py  compute.py  contracts.py  formalizer.py  interpreter.py  librarian.py  methodologist.py  semantic.py  skeptic.py
backend/nullifier/config/: default_config.toml  loader.py
backend/nullifier/data/: liebeskind2016_gene_ages.tsv  mammal_panel.txt  prepare_liebeskind2016.py  random_background_300.txt  v_genes3_curated_sets.json
backend/nullifier/data/phenotypes/: cortical_neurons_mammals.tsv
backend/nullifier/report/: renderer.py
backend/nullifier/review/: interactive.py
backend/nullifier/store/: runs.py
backend/nullifier/tools/: branch_rates.py  compute.py  diagnostics.py  dnds.py  ensembl.py  flag_store.py  gene_sets.py  genomic_data.py  gnomad.py  literature.py  llm_client.py  paml.py  panels.py  phenotypes.py  phylo.py  query_expander.py  r_bridge.py  rerconverge.py
backend/nullifier/tools/sources/: biorxiv.py  europe_pmc.py  (+3 more)
backend/nullifier/validation/: __init__.py  vgenes5.py
backend/tests/: test_agents_integration.py  test_compara.py  test_compute.py  test_dnds.py  test_fp_risk.py  test_gnomad.py  test_paml.py  test_phenotypes.py  test_phylo.py  test_pipeline_concurrency.py  test_pipeline_resilience.py  test_r_bridge_dnds.py  test_semantic_scholar.py  test_vgenes5_validation.py
(+67 files in other folders)
